Added new learner activity.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:background="#000ff2"
-            />
+            android:onClick="loadNewLearnerActivity" />
 
     </TableRow>
 
