--- a/app/src/main/res/layout/activity_new_learner.xml
+++ b/app/src/main/res/layout/activity_new_learner.xml
@@ -1,12 +1,53 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.home_didact.activities.NewLearnerActivity">
+    tools:context="com.home_didact.activities.NewLearnerActivity"
+    android:scrollbars="vertical">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/TextViewtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_activity_new_learner"
+            android:textSize="10pt">
+            </TextView>
+
+        <EditText
+            android:id="@+id/NewLearnerName"
+            android:layout_height="wrap_content"
+            android:hint="@string/new_learner_enter_name"
+            android:inputType="textPersonName"
+            android:layout_width="fill_parent">
+            </EditText>
+
+        <EditText
+            android:id="@+id/NewLearnerAddress"
+            android:layout_height="wrap_content"
+            android:hint="@string/new_learner_enter_address"
+            android:inputType="textPostalAddress"
+            android:layout_width="fill_parent">
+            </EditText>
+
+        <EditText
+            android:id="@+id/NewLearnerPhoneNumber"
+            android:layout_height="wrap_content"
+            android:hint="@string/new_learner_enter_phone_number"
+            android:inputType="phone"
+            android:layout_width="fill_parent">
+        </EditText>
+
+
+    </LinearLayout>
+
+
+</ScrollView>
