--- a/app/src/main/res/layout/activity_new_learner.xml
+++ b/app/src/main/res/layout/activity_new_learner.xml
@@ -12,14 +12,16 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <TextView
             android:id="@+id/TextViewtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/title_activity_new_learner"
-            android:textSize="10pt">
+            android:textSize="10pt"
+            android:layout_weight="1.50">
             </TextView>
 
         <EditText
@@ -46,6 +48,11 @@
             android:layout_width="fill_parent">
         </EditText>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/submit"
+            android:layout_gravity="right" />
 
     </LinearLayout>
 
