--- a/app/src/main/res/layout/activity_new_learner.xml
+++ b/app/src/main/res/layout/activity_new_learner.xml
@@ -52,7 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/submit"
-            android:layout_gravity="right" />
+            android:layout_gravity="right"
+            android:onClick="handleFormInput" />
 
     </LinearLayout>
 
