--- a/app/src/main/res/layout/activity_learner_profile.xml
+++ b/app/src/main/res/layout/activity_learner_profile.xml
@@ -4,9 +4,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.home_didact.activities.LearnerProfile">
+    tools:context="com.home_didact.activities.LearnerProfileActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TableLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:stretchColumns="0,1"
+        android:id="@+id/learners_table"
+        android:layout_weight="1">
+
+
+    </TableLayout>
 
 </RelativeLayout>
