--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:background="#eb0282"
+            android:onClick="loadChangeLearnerActivity"
             android:text="Change learner" />
 
         <TextView
